feat: add customOptions
