# src/handlers/screenshot.ts
@@ -4,6 +4,7 @@ import { BrowserType } from "../types.js";
 import { getBrowser } from "../getBrowser.js";
 import { ScreenshotRequest } from "../apiTypes.js";
 import { screenshotRequest } from "../apiJoi.js";
+import { pageAfterGoto, pageBeforeGoto } from "../browser/ext/index.js";
 
 const handler =
   (browserType: BrowserType): HandlerFunc =>
@@ -18,7 +19,11 @@ const handler =
       body.contextOptions || {},
       async (context) => {
         const page = await context.newPage();
+
+        await pageBeforeGoto(page, body.customOptions);
         await page.goto(body.url, body.gotoOptions);
+        await pageAfterGoto(page, body.customOptions);
+
         const screenshot = await page.screenshot({
           ...(body.options || {}),
           type,
